<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_running">

    <fragment
        android:id="@+id/nav_running"
        android:name="com.example.NiceRun.main.running.RunMainFragment"
        android:label="@string/menu_running"
        tools:layout="@layout/fragment_running_main" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.NiceRun.main.canlendar.CalendarMainFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_extra"
        android:name="com.example.NiceRun.main.slideshow.SlideshowFragment"
        android:label="@string/menu_extra"
        tools:layout="@layout/fragment_slideshow" />
</navigation>