<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/spacing_small">
    <TextView
        android:id="@+id/recommand_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_recommand_title"
        android:textSize="@dimen/text_size_medium2"
        android:layout_marginLeft="@dimen/spacing_small2"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_small3"
        >
        <ImageView
            android:id="@+id/detail_track_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/tag1_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/flat"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/img1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag1_text"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/tag2_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/hill"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/img2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag2_text"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/tag3_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/alone"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/img3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag3_text"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/tag4_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/group"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/img4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag4_text"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/tag5_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/walking"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/img5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag5_text"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/tag6_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/run"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/img6_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag6_text"
                android:visibility="gone"
                />

            </LinearLayout>
        <TextView
            android:id="@+id/dialog_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_small3"
            />
        </LinearLayout>
    <Button
        android:id="@+id/okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="확인"/>
</LinearLayout>